force-app/main/default/objects/trailheadapp__Trailhead_User_Data__c/fields/trailheadapp__Avatar__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Avatar__c</fullName>
    <label>Avatar</label>
    <type>Url</type>
</CustomField>