force-app/main/default/objects/trailheadapp__Trailhead_User_Data__c/fields/trailheadapp__Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Profile_URL__c</fullName>
    <label>Profile_URL</label>
    <type>Url</type>
</CustomField>