force-app/main/default/objects/trailheadapp__Trailhead_User_Data__c/fields/trailheadapp__User__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trailhead_Users_Data</relationshipName>
    <type>Lookup</type>
</CustomField>